# CTKDemo

./: CMakeLists.txt
BlogHandlerPlugin/: CMakeLists.txt  MANIFEST.MF  Resource.qrc  blog_event_handler.cpp  blog_event_handler_activator.cpp
BlogHandlerPlugin/include/: blog_event_handler.h  blog_event_handler_activator.h
BlogManagerPlugin/: CMakeLists.txt  MANIFEST.MF  Resource.qrc  blog_manager.cpp  blog_manager_activator.cpp
BlogManagerPlugin/include/: blog_manager.h  blog_manager_activator.h  blog_service.h
BookDemo/: CMakeLists.txt  main.cpp  mainwindow.cpp
BookDemo/include/: mainwindow.h
CTKWidgets/: CMakeLists.txt  main.cpp
DockWidgets/: CMakeLists.txt  main.cpp  mainwindow.cpp
DockWidgets/include/: mainwindow.h
GreetPlugin/: CMakeLists.txt  MANIFEST.MF  Resource.qrc  greet_activator.cpp  greet_impl.cpp
GreetPlugin/include/: greet_activator.h  greet_impl.h  greet_service.h
HelloCTK/: CMakeLists.txt  MANIFEST.MF  hello_activator.cpp  hello_impl.cpp
HelloCTK/include/: hello_activator.h  hello_impl.h  hello_service.h
LoadHelloCTK/: CMakeLists.txt  main.cpp  mainwindow.cpp
LoadHelloCTK/include/: mainwindow.h
PluginA/: CMakeLists.txt  MANIFEST.MF  PluginAActivator.cpp  Resource.qrc  pluginAImpl.cpp
PluginA/include/: PluginAActivator.h  PluginAService.h  pluginAImpl.h
PluginB/: CMakeLists.txt  MANIFEST.MF  PluginBActivator.cpp  PluginBImpl.cpp  Resource.qrc
PluginB/include/: PluginBActivator.h  PluginBImpl.h  PluginBService.h
ServiceFactory/: CMakeLists.txt  MANIFEST.MF  Resource.qrc  hello_activator.cpp  hello_impl.cpp  service_factory.cpp
ServiceFactory/include/: hello_activator.h  hello_impl.h  hello_service.h  service_factory.h
UIDemo/: CMakeLists.txt
