cmake_minimum_required(VERSION 3.11)
project(org_ctk_example)
set(CMAKE_AUTOMOC ON)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set_property(GLOBAL PROPERTY AUTOGEN_TARGETS_FOLDER AutoMoc)
set(CMAKE_CONFIGURATION_TYPES "Debug")
find_package(Qt5 COMPONENTS REQUIRED Sql Concurrent Core Gui Widgets OpenGL Xml PrintSupport)
find_package(CTK REQUIRED)
include(${CTK_USE_FILE})
#add_subdirectory(CTKWidgets)
add_subdirectory(HelloCTK)
add_subdirectory(LoadHelloCTK)
add_subdirectory(GreetPlugin)
add_subdirectory(BlogManagerPlugin)
add_subdirectory(BlogHandlerPlugin)
add_subdirectory(DockWidgets)
add_subdirectory(ServiceFactory)
add_subdirectory(PluginA)
add_subdirectory(PluginB)
add_subdirectory(UIDemo)
add_subdirectory(BookDemo)